--- a/style.css
+++ b/style.css
@@ -998,7 +998,7 @@ img[alt="Triangle"]{
 .center_block .section_block:nth-child(1){
     width: 35%;
 }
-.center_block .section_block:nth-child(2){g
+.center_block .section_block:nth-child(2){
     width: 37%;
 }
 .center_block .section_block:nth-child(3){
